# ledgerlm

./: .gitignore  CLAUDE.md  DESIGN-AMENDMENTS.md  DESIGN.md  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/building-provider-adapters/: SKILL.md
.claude/skills/changing-the-schema/: SKILL.md
.claude/skills/computing-costs/: SKILL.md
.claude/skills/executing-a-phase/: SKILL.md
.github/workflows/: ci.yml
data/: prices_seed.yaml
src/ledgerlm/: __init__.py  alerts.py  cli.py  config.py  export.py  optimizer.py  pricing.py  recorder.py  streaming.py  tagging.py  wrapper.py
src/ledgerlm/dashboard/: __init__.py  app.py  queries.py
src/ledgerlm/dashboard/static/: app.js  style.css
src/ledgerlm/dashboard/templates/: _attribution.html  _filters.html  _optimizer.html  _overview.html  _top_calls.html  attribution.html  base.html  optimizer.html  overview.html  prices.html  top_calls.html
src/ledgerlm/db/: __init__.py  migrate.py  models.py  session.py
src/ledgerlm/db/migrations/: env.py
src/ledgerlm/db/migrations/versions/: 0001_create_llm_events_and_model_prices.py  0002_add_first_token_ms_to_llm_events.py  0003_create_alert_firings.py
src/ledgerlm/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
tests/: conftest.py  test_alerts.py  test_async_wrap.py  test_dashboard.py  test_export.py  test_import.py  test_live_integration.py  test_normalizers.py  test_optimizer.py  test_pricing.py  test_resilience.py  test_smoke.py  test_streaming.py  test_tags.py  test_unrecorded_paths.py
